<resources>
    <string name="app_name">Edytor zdjęć</string>
    <string name="action_settings">Settings</string>
    <string name="add_image">Dodaj zdjęcie</string>
    <string name="sepia">Sepia</string>
    <string name="blackandwhite">Czarno-białe</string>
    <string name="delete">Usuń</string>
    <string name="border">Ramka</string>
    <string name="gauss">Rozmycie Gaussowskie</string>
    <string name="rozjasnianie">Rozjaśnienie</string>
    <string name="engrave">Grawer</string>
    <string name="snow">Snieg</string>
    <string name="saturation">Nasycenie</string>
    <string name="idk">idk</string>
    <string name="rogi">Zaokrąglone rogi</string>
    <string name="prawo">W prawo</string>
    <string name="lewo">W lewo</string>
    <string name="save">Zapisz</string>
    <string name="filtry">Filtry</string>
    <string name="obróć">Obróć zdjęcie</string>
    <string name="dodajElementy">Dodaj elementy</string>
    <string name="facebook_app_id">994938707544168</string>
    <string name="facebook_login_protocol_scheme">fb994938707544168</string>

</resources>
