<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.aplikacja.MainActivity">

    <item
        android:id="@+id/add_image"
        android:orderInCategory="100"
        android:title="@string/add_image"
        app:showAsAction="never" />


    <item
    android:id="@+id/filtry"
    android:orderInCategory="100"
    android:title="@string/filtry"
    app:showAsAction="never" />

    <item
        android:id="@+id/obrót"
        android:orderInCategory="100"
        android:title="@string/obróć"
        app:showAsAction="never" />


    <item
        android:id="@+id/delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never" />




<!--    <item-->
<!--        android:id="@+id/rozja"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/rozjasnianie"-->
<!--        app:showAsAction="never" />-->

<!--    <item-->
<!--        android:id="@+id/engrave"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/engrave"-->
<!--        app:showAsAction="never" />-->

<!--    <item-->
<!--        android:id="@+id/saturation"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/saturation"-->
<!--        app:showAsAction="never" />-->


    <item
        android:id="@+id/dodajElementy"
        android:orderInCategory="100"
        android:title="@string/dodajElementy"
        app:showAsAction="never" />

    <item
        android:id="@+id/save"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="never" />


<!--    <item-->
<!--        android:id="@+id/zrobZdjecie"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="zdjecie"-->
<!--        app:showAsAction="never" />-->


    <item
        android:id="@+id/instagram"
        android:orderInCategory="100"
        android:title="Instagram"
        app:showAsAction="never" />

    <item
        android:id="@+id/facebook"
        android:orderInCategory="100"
        android:title="Facebook"
        app:showAsAction="never" />
    <item
        android:id="@+id/text"
        android:orderInCategory="100"
        android:title="Memy"
        app:showAsAction="never" />

</menu>
